syntax = "proto3";

package track;

option go_package = "github.com/Zhanbatyr06/ADP2_ASS1/track-service/proto";

message Track {
  string id = 1;
  string title = 2;
  string artist = 3;
  string album = 4;
  int32 duration_sec = 5;
  int64 created_at = 6;
}

message CreateTrackRequest {
  string title = 1;
  string artist = 2;
  string album = 3;
  int32 duration_sec = 4;
}

message CreateTrackResponse {
  Track track = 1;
}

message GetTrackByIDRequest {
  string id = 1;
}

message GetTrackByIDResponse {
  Track track = 1;
}

message GetAllTracksRequest {
  string title = 1;
  string artist = 2;
  int64 page = 3;
  int64 limit = 4;
}

message GetAllTracksResponse {
  repeated Track tracks = 1;
}

message UpdateTrackRequest {
  string id = 1;
  string title = 2;
  string artist = 3;
  string album = 4;
  int32 duration_sec = 5;
}

message UpdateTrackResponse {
  string message = 1;
}

message DeleteTrackRequest {
  string id = 1;
}

message DeleteTrackResponse {
  string message = 1;
}

service TrackService {
  rpc CreateTrack(CreateTrackRequest) returns (CreateTrackResponse);
  rpc GetTrackByID(GetTrackByIDRequest) returns (GetTrackByIDResponse);
  rpc GetAllTracks(GetAllTracksRequest) returns (GetAllTracksResponse);
  rpc UpdateTrack(UpdateTrackRequest) returns (UpdateTrackResponse);
  rpc DeleteTrack(DeleteTrackRequest) returns (DeleteTrackResponse);
}
